--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/InterfaceGraficaComBDd.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.29.zip=C:\\Users\\paulo.gois\\Downloads\\mysql-connector-java-8.0.29.zip
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.29.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
